<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 Iranian Supreme Council of ICT, The FarsiTel Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASICS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory />
  <CheckBoxPreference
    android:key="@string/gps_pref_key"
    android:title="@string/gps_prompt"
    android:summary="@string/gps_summary"
    android:defaultValue="false"
  />
 <ListPreference
 android:key="@string/state_location_pref_key"
 android:title="@string/state_location_title"
 android:summary="@string/state_location_summary"
 android:entries="@array/state_names"
 android:entryValues="@array/state_keys"
 android:dialogTitle="@string/state_location_title"
 android:defaultValue="12"
/>
 
</PreferenceScreen>
